--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Pajina de Jerseys</h1>
 <u1>
-    <li>Pagina 1</li>
-    <li>Pagina 2</li>
-    <li>Pagina 3</li>
+    <li><a href="Pagina1.html"> Pagina 1</a></li>
+    <li><a href="Pagina1.html"></a>Pagina 2</li>
+    <li><a href="Pagina1.html"></a>Pagina 3</li>
 </u1>
